pictor (2.30) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 Jun 2014 11:11:37 -0700

pictor (2.29-0ubuntu1) utopic; urgency=medium

  * pictor-unload:
    - add a few more info messages
    - fix file/directory permissions on unload

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 Jun 2014 11:11:32 -0700

pictor (2.28-0ubuntu1) utopic; urgency=medium

  * img/pictor_14.png, img/pictor_192.png, img/pictor_64.png,
    img/pictor.png:
    - transparent background for logos

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 09:52:40 -0700

pictor (2.27-0ubuntu1) trusty; urgency=medium

  * === added directory img, img/pictor_14.png, img/pictor_192.png,
    img/pictor_64.png, img/pictor.png:
    - add new pictor logo
  * debian/pictor.postrm:
    - fix copy-n-paste error from musica

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 04 Apr 2014 14:34:00 -0500

pictor (2.26-0ubuntu1) trusty; urgency=low

  * debian/apache.conf => debian/pictor.conf, debian/pictor.install,
    debian/pictor.links, debian/pictor.postinst, debian/pictor.postrm:
    - LP: #1293015
    - fix package installation and removal

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 15 Mar 2014 21:36:47 -0500

pictor (2.25-0ubuntu1) trusty; urgency=low

  * index.php:
    - support a "filter" parameter, to filter on filenames
    - useful on a thumbnails page for an album, where you
      only want to see a subset of the pictures in the album,
      perhaps those matching a certain date
    - currently implemented as a global, which is kind of messy...
  * pictor-unload:
    - restore functionality that moves the source out of the way, to mark as unloaded

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 01 Nov 2013 13:46:42 -0500

pictor (2.24-0ubuntu1) saucy; urgency=low

  * debian/control, debian/pictor-unload.install, debian/pictor-
    unload.manpages, pictor-rename, pictor-rename.1, pictor-unload: