@@ -7,7 +7,7 @@ webserver="apache2"
 
 case "$1" in
 	configure)
-		chown www-data:www-data /var/cache/$PKG /var/cache/$PKG/thumbnails /var/cache/$PKG/resize
+		chown www-data:www-data /var/cache/$PKG /var/cache/$PKG/thumbnails /var/cache/$PKG/resize /var/cache/$PKG/transcode
 		a2ensite $PKG
 		invoke-rc.d $webserver reload
 	;;
